@@ -46,8 +46,11 @@ category.name.CycleView = UCDetector
 view.name.CycleView = Cycle View
 consoleFactory.label = UCDetector Console
 
-# Report
+## Report
+# extension-point
 extension-point.name = UCDetector Reports
 extension-point.headless.name = UCDetector Iterator
-text.name = text
-html.name = html
+# org.ucdetector.headless
+report.text.name = text
+report.html.name = html
+report.custom.name = custom
