@@ -5,6 +5,7 @@ New features:
  - New build in detection mode "extreme" (no filter, show all kinds of warnings)
  - UCDetector actions are now available for Working Sets
  - New extension point 'org.ucdetector.reports' to create custom report using xslt or java
+ - Create custom report by renaming and changing __custom.xslt
 
 Bugfixes:
  - Fixed broken filter '@SuppressWarnings("ucd") = false'
